<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#a8f350"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.i.quick_gift.InterestActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/back"
        android:textColor="#333"
        android:onClick="goBack"
        android:background="#fff"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/interest"
        android:text="What interest?"
        android:layout_width="wrap_content"
        android:textColor="#333"
        android:layout_below="@id/back"
        android:textSize="30sp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/tech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tech"
        android:onClick="getInterest"
        android:layout_below="@id/interest"
        android:background="#fff"
        android:textColor="#333"
        />

    <Button
        android:id="@+id/outdoors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/outdoors"
        android:onClick="getInterest"
        android:layout_below="@id/tech"
        android:background="#fff"
        android:textColor="#333"
        />

    <Button
        android:id="@+id/sports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sports"
        android:onClick="getInterest"
        android:layout_below="@id/outdoors"
        android:background="#fff"
        android:textColor="#333"
        />

    <Button
        android:id="@+id/music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/music"
        android:onClick="getInterest"
        android:layout_below="@id/sports"
        android:background="#fff"
        android:textColor="#333"
        />

    <Button
        android:id="@+id/cooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cooking"
        android:onClick="getInterest"
        android:layout_below="@id/music"
        android:background="#fff"
        android:textColor="#333"
        />

</RelativeLayout>
