<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#a8f350"
    tools:context="com.i.quick_gift.EventsActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/back"
        android:textColor="#333"
        android:onClick="goBack"
        android:background="#fff"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/interest"
        android:text="What events?"
        android:layout_width="wrap_content"
        android:textColor="#333"
        android:layout_below="@id/back"
        android:textSize="30sp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/christmas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/christmas"
        android:onClick="getEvent"
        android:layout_below="@id/interest"
        android:background="#fff"
        android:textColor="#333"
        />

    <Button
        android:id="@+id/valentines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/valentines"
        android:onClick="getEvent"
        android:layout_below="@id/christmas"
        android:background="#fff"
        android:textColor="#333"
        />

    <Button
        android:id="@+id/parentsday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/parentsday"
        android:onClick="getEvent"
        android:layout_below="@id/valentines"
        android:background="#fff"
        android:textColor="#333"
        />

    <Button
        android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/birthday"
        android:onClick="getEvent"
        android:layout_below="@id/parentsday"
        android:background="#fff"
        android:textColor="#333"
        />

    <Button
        android:id="@+id/anniversary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/anniversary"
        android:onClick="getEvent"
        android:layout_below="@id/birthday"
        android:background="#fff"
        android:textColor="#333"
        />

</RelativeLayout>
