<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#a8f350"
    tools:context="com.i.quick_gift.genderActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/back"
        android:textColor="#333"
        android:onClick="goBack"
        android:background="#fff"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/forwhatgender"
        android:text="What gender?"
        android:layout_width="wrap_content"
        android:textColor="#333"
        android:layout_below="@id/back"
        android:textSize="30sp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/female"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/female"
        android:onClick="getGender"
        android:layout_below="@id/forwhatgender"
        android:background="#fff"
        android:textColor="#333"
        />

    <Button
        android:id="@+id/male"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/male"
        android:onClick="getGender"
        android:layout_below="@id/female"
        android:background="#fff"
        android:textColor="#333"
        />

</RelativeLayout>
